--- a/Caelum/.project
+++ b/Caelum/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Caelum</name>
+	<name>Caelum-fj21-JSP</name>
 	<comment></comment>
 	<projects>
 	</projects>
