--- a/Caelum/WebContent/WEB-INF/web.xml
+++ b/Caelum/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>Caelum</display-name>
+  <display-name>Caelum-fj21-JSP</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,12 +9,25 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/spring-context.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
   <servlet-mapping>
-  	<servlet-name>ControllServlet</servlet-name>
-  	<url-pattern>/contatos-servlet</url-pattern>
+    <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
   <servlet>
-  	<servlet-name>ControllServlet</servlet-name>
-  	<servlet-class>controller.ControllServlet</servlet-class>
+    <servlet-name>ControllServlet</servlet-name>
+    <servlet-class>controller.ControllServlet</servlet-class>
   </servlet>
+  <servlet-mapping>
+    <servlet-name>ControllServlet</servlet-name>
+    <url-pattern>/contatos-servlet</url-pattern>
+  </servlet-mapping>
 </web-app>
